--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@types/node": "^12.6.3",
         "@types/restify": "7.2.9",
         "nodemon": "~1.18.10",
+        "readline-sync": "^1.4.9",
         "tslint": "~5.14.0",
         "tslint-config-airbnb": "^5.11.1",
         "typescript": "~3.3.3"
