--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
         "credentialgen": "node ./scripts/google.json.generator.js",
         "prebuild": "npm run credentialgen",
         "build": "tsc --build",
-        "lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
+        "lint": "tslint -c tslint.json 'src/**/*.ts'",
         "prestart": "npm run build",
         "start": "node ./lib/index.js",
         "postinstall": "npm run build",
-        "test": "npm run build",
+        "test": "npm run lint && npm run build",
         "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
     },
     "repository": {
