--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -6,3 +6,4 @@ google:
 azure:
   microsoft_app_password: MICROSOFT_APP_PASSWORD
   microsoft_app_id: MICROSOFT_APP_ID
+  direct_line_token: DIRECT_LINE_TOKEN
