--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
         "build": "tsc --build",
         "lint": "tslint -c tslint.json 'src/**/*.ts'",
         "prestart": "npm run build",
-        "start": "node ./lib/index.js",
+        "start": "node ./lib/src/index.js",
         "postinstall": "npm run build",
-        "test": "npm run lint && npm run build",
+        "pretest": "npm run lint && npm run build",
+        "test": "jasmine --config=tests/config/jasmine.json",
         "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
     },
     "repository": {
@@ -33,10 +34,14 @@
         "@types/config": "0.0.34",
         "@types/dialogflow": "^0.9.4",
         "@types/dotenv": "6.1.0",
+        "@types/jasmine": "^3.3.16",
         "@types/node": "^12.6.3",
         "@types/restify": "7.2.9",
+        "@types/superagent": "^4.1.3",
+        "jasmine": "^3.4.0",
         "nodemon": "~1.18.10",
         "readline-sync": "^1.4.9",
+        "superagent": "^5.1.0",
         "tslint": "~5.14.0",
         "tslint-config-airbnb": "^5.11.1",
         "typescript": "~3.3.3"
