--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@types/restify": "7.2.9",
         "@types/superagent": "^4.1.3",
         "jasmine": "^3.4.0",
+        "jasmine-spec-reporter": "^4.2.1",
         "nodemon": "~1.18.10",
         "readline-sync": "^1.4.9",
         "superagent": "^5.1.0",
