--- a/config/default.yml
+++ b/config/default.yml
@@ -6,4 +6,8 @@ google:
   auth_provider_x509_cert_url: https://www.googleapis.com/oauth2/v1/certs
   decrypt_password: password
 encrypt_algorithm: aes-256-ctr
-  
+aws:
+  dynamoDB:
+    region: us-east-1
+    endpoint: http://dynamodb.us-east-1.amazonaws.com
+    apiVersion: '2012-08-10'
