--- a/package.json
+++ b/package.json
@@ -22,29 +22,32 @@
         "url": "https://github.com"
     },
     "dependencies": {
-        "botbuilder": "~4.4.0",
-        "botbuilder-dialogs": "^4.5.0",
-        "config": "^3.1.0",
-        "dialogflow": "^0.10.2",
-        "dotenv": "^7.0.0",
-        "replace": "~1.1.0",
-        "restify": "~8.2.0"
+        "aws-sdk": "2.503.0",
+        "botbuilder": "4.4.0",
+        "botbuilder-dialogs": "4.5.0",
+        "config": "3.1.0",
+        "debug": "4.1.1",
+        "dialogflow": "0.10.2",
+        "dotenv": "7.0.0",
+        "replace": "1.1.0",
+        "restify": "^8.2.0"
     },
     "devDependencies": {
         "@types/config": "0.0.34",
-        "@types/dialogflow": "^0.9.4",
+        "@types/debug": "4.1.5",
+        "@types/dialogflow": "0.9.4",
         "@types/dotenv": "6.1.0",
-        "@types/jasmine": "^3.3.16",
-        "@types/node": "^12.6.3",
+        "@types/jasmine": "3.3.16",
+        "@types/node": "12.6.3",
         "@types/restify": "7.2.9",
-        "@types/superagent": "^4.1.3",
-        "jasmine": "^3.4.0",
-        "jasmine-spec-reporter": "^4.2.1",
-        "nodemon": "~1.18.10",
-        "readline-sync": "^1.4.9",
-        "superagent": "^5.1.0",
-        "tslint": "~5.14.0",
-        "tslint-config-airbnb": "^5.11.1",
-        "typescript": "~3.3.3"
+        "@types/superagent": "4.1.3",
+        "jasmine": "3.4.0",
+        "jasmine-spec-reporter": "4.2.1",
+        "nodemon": "1.18.10",
+        "readline-sync": "1.4.9",
+        "superagent": "5.1.0",
+        "tslint": "5.14.0",
+        "tslint-config-airbnb": "5.11.1",
+        "typescript": "3.3.3"
     }
 }
